--- a/demo/bootstrap/control/Dockerfile
+++ b/demo/bootstrap/control/Dockerfile
@@ -1,16 +1,13 @@
 FROM ubuntu
 
-RUN apt-get -y update && \
-    apt-get install -y python-yaml python-jinja2 python-httplib2 python-keyczar python-paramiko python-setuptools python-pkg-resources git python-pip
-RUN mkdir /etc/ansible/
-RUN echo '[local]\nlocalhost\n' > /etc/ansible/hosts
-RUN mkdir /opt/ansible/
-RUN git clone -b stable-2.2 http://github.com/ansible/ansible.git /opt/ansible/ansible
-WORKDIR /opt/ansible/ansible
-RUN git submodule update --init
-ENV PATH /opt/ansible/ansible/bin:/bin:/usr/bin:/sbin:/usr/sbin
-ENV PYTHONPATH /opt/ansible/ansible/lib
-ENV ANSIBLE_LIBRARY /opt/ansible/ansible/library
+RUN apt-get update \
+    && apt-get install -y build-essential libssl-dev libffi-dev curl \
+    && apt-get install -y python python-dev python-pip python-virtualenv \ 
+    && rm -rf /var/lib/apt/lists/* \
+    && pip install --upgrade pip
+
+RUN pip install ansible
+
 WORKDIR /ansible
 
 CMD ["tail", "-f", "/dev/null"]
