--- a/demo/bootstrap/control/Dockerfile
+++ b/demo/bootstrap/control/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu
 
 RUN apt-get update \
-    && apt-get install -y build-essential libssl-dev libffi-dev curl \
+    && apt-get install -y build-essential libssl-dev libffi-dev curl wget iputils-ping \
     && apt-get install -y python python-dev python-pip python-virtualenv \ 
     && rm -rf /var/lib/apt/lists/* \
     && pip install --upgrade pip
